# Swarm-Lens-Assesment-task

./: .env.example  README.md  document_processor.py  main.py  pyproject.toml
.chroma/: chroma.sqlite3
chains/: document_relevance.py  evaluate.py  generate_answer.py  question_relevance.py
