[project]
name = "swarm-lens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.4",
    "google-genai>=1.49.0",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "langchain>=1.0.3",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-google>=0.1.1",
    "langgraph>=1.0.2",
    "langsmith>=0.4.41",
    "pdfplumber>=0.11.7",
    "pypdf>=6.1.3",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
]
